small fix: z-index added to the text.

--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -7,6 +7,7 @@
 	overflow: hidden;
 
 	.overlay {
+		z-index: 1000;
 		position: absolute;
 		width: 100%;
 		height: 100%;
